--- a/content/css/style.css
+++ b/content/css/style.css
@@ -1,20 +1,22 @@
 html {
-  height: 100%;
+    height: 100%;
+    font-family: sans-serif;
+    color: white;    
 }
 
 body {
-  margin: 0px;
-  height: 100%;
+    margin: 0px;
+    height: 100%;
 }
 
 #wrapper {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  /*background-image: url("../images/03d.jpg");*/
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    /*background-image: url("../images/03d.jpg");*/
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 #input-city {
